2001-06-23  Bruno Haible  <haible@clisp.cons.org>

	* aclocal.sh: Don't fail if aclocal isn't available.

2001-06-15  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Remove post-processing of tests/Makefile.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add test for cross compilation and for PERL.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Bump version number to 0.11.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Check for ssize_t, pid_t, posix_spawn, select.
	Call AC_FUNC_VFORK, gt_UNION_WAIT.

2001-06-08  Bruno Haible  <haible@clisp.cons.org>

	* ltmain.sh: Upgrade to libtool-1.4.
	* ltconfig: Remove file.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Bump version number to 0.10.38.
	(RELEASE_DATE): Bump.

	* INSTALL (Optional Features): Document --with-libiconv-prefix.
	(Particular Systems): Generalize section about /usr/local to "most
	systems".
	* config.guess, config.sub: Update to GNU version 2001-05-11.

2001-05-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (SUBDIRS): Add man.
	* configure.in (AC_OUTPUT): Add man/Makefile.

2001-05-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add cs, gl, id, it, ru. zh.

2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add et.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Check for dvips, texi2pdf, texi2html.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Bump version number to 0.10.37.
	(RELEASE_DATE): Bump.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call jm_PREREQ_MBSWIDTH.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (ps, pdf, html): New targets.

2001-04-02  Bruno Haible  <haible@clisp.cons.org>
