@@ -1,3 +1,7 @@
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* aclocal.sh: Tweak last patch for automake-1.4f.
+
 2001-06-23  Bruno Haible  <haible@clisp.cons.org>
 
 	* aclocal.sh: Don't fail if aclocal isn't available.
